<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragment_phrases_parent_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PhrasesFragment">

    <LinearLayout
        android:id="@+id/translator_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"

        android:layout_margin="8dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="English Phrase"

            style="@style/TextViewHeaders"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"

            android:layout_weight="1"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phrases_english_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:maxLines="1"
                tools:ignore="KeyboardInaccessibleWidget"
                android:focusable="true"
                android:focusableInTouchMode="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Spanish Phrase"
            android:textSize="20sp"

            android:layout_marginTop="16dp"
            style="@style/TextViewHeaders"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phrases_french_textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"

            android:layout_weight="1"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phrases_french_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:maxLines="1"
                tools:ignore="KeyboardInaccessibleWidget"
                android:focusable="true"
                android:focusableInTouchMode="true"/>
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"

        app:layout_constraintTop_toBottomOf="@id/translator_linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">
<!--    <Button-->
<!--        android:id="@+id/phrases_translate_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Translate"-->

<!--        android:layout_margin="8dp"-->

<!--        />-->
        <ImageView
            android:id="@+id/phrases_speak_button"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/ic_baseline_volume_up_24"

            android:layout_marginTop="25dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:visibility="visible"

            android:gravity="left"

            android:layout_marginTop="25dp"

            android:padding="16dp"

            >

            <RelativeLayout
                android:id="@+id/add_phrase_to_quiz_Button"
                android:layout_width="@dimen/round_action_button_width"
                android:layout_height="@dimen/round_action_button_height"
                style="@style/RoundActionButton"
                app:layout_constraintTop_toBottomOf="@+id/settings_answer_options_cardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="center"

                android:layout_marginRight="8dp"

                android:stateListAnimator="@animator/star_button_press">

                <TextView
                    android:layout_width="@dimen/button_star_width"
                    android:layout_height="@dimen/button_star_height"
                    android:background="@drawable/white_star_vector"

                    android:layout_marginBottom="10dp"

                    android:gravity="center"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/phrases_add_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Phrase to Quiz"

                style="@style/ActionButtonText"

                android:layout_margin="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="right"

            android:padding="16dp">

            <TextView
                android:id="@+id/phrases_edit_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="View all Phrases"

                style="@style/ActionButtonText"

                android:layout_margin="8dp"/>
            <RelativeLayout
                android:id="@+id/view_all_phrases_button"
                android:layout_width="@dimen/round_action_button_width"
                android:layout_height="@dimen/round_action_button_height"
                style="@style/RoundActionButton"

                app:layout_constraintTop_toBottomOf="@+id/settings_answer_options_cardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="center"

                android:layout_marginLeft="8dp"

                android:stateListAnimator="@animator/star_button_press">

                <TextView
                    android:layout_width="@dimen/button_star_width"
                    android:layout_height="@dimen/button_star_height"
                    android:background="@drawable/white_star_vector"

                    android:layout_marginBottom="10dp"

                    android:gravity="center"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>