<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.phrasales.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_simple" />

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.example.phrasales.ui.QuizFragment"
        android:label="@string/title_quiz"
        tools:layout="@layout/fragment_quiz" />

    <fragment
        android:id="@+id/navigation_phrases"
        android:name="com.example.phrasales.ui.PhrasesFragment"
        android:label="@string/title_phrases"
        tools:layout="@layout/fragment_phrases" />
</navigation>